--- a/week02/최원오/04_타입_코드_처리하기.md
+++ b/week02/최원오/04_타입_코드_처리하기.md
@@ -42,3 +42,31 @@
 ### 4.1.7 리팩터링 패턴: 메서드의 인라인화
 
 - 가독성에 도움이 되지 않는 메서드를 제거
+
+## 4.2 긴 if 문의 리팩터링
+
+### 4.2.1 일반성 제거
+
+- 일반성은 유연성이 떨어지고 변경하기 어렵게 만든다.
+- 일반화를 줄이고 특정화한 버전의 함수를 도입하는 과정을 메서드 전문화
+
+### 4.2.2 리팩터링 패턴: 메서드 전문화
+
+- 일반화하고 재사용하면 책임이 흐려지고 다양한 위치에서 코드를 호출할 수 있기 때문에 문제가 될 수 있다.
+- 전문화된 메서드는 더 적은 위치에서 호출되어 필요성이 없어지면 더 빠르게 제거할 수 있다.
+
+### 4.2.3 switch가 허용되는 유일한 경우
+
+- 기존 이중배열로 구성된 map 배열을 transform하는 함수에서 switch 케이스로 class생성
+
+### 4.2.4 규칙: switch를 사용하지 말 것
+
+- default 케이스가 없고 모든 case에 반환 값이 있는 경우가 아니라면 사용하지마라
+- 타입스크립트에서 switch문과 enum을 함께 사용 시 enum의 열거값을 모두 사용하지 않을 경우 Type error를 일으킨다.
+
+`컨텍스트에 초점을 맞춘다는 것은 데이터에서 불변속성을 더 멀리 위치시켜 불변속성을 전역화 하는 것?` 불변속성을 타입/인터페이스 레벨로 전역화
+
+### 4.2.5 if 제거하기
+
+- 클래스로 코드 이관 패턴을 통해 제거
+- 이후 메서드의 인라인화로 사용 후 기존 함수 제거
