4장 타입 코드 처리하기 - 3

--- a/week02/최원오/04_타입_코드_처리하기.md
+++ b/week02/최원오/04_타입_코드_처리하기.md
@@ -70,3 +70,30 @@
 
 - 클래스로 코드 이관 패턴을 통해 제거
 - 이후 메서드의 인라인화로 사용 후 기존 함수 제거
+
+## 4.3 코드 중복 처리
+
+### 4.3.1 인터페이스 대신 추상 클래스를 사용할 수는 없을까?
+
+- 인터페이스를 사용하면 휴먼에러로 속성을 잊거나 안되는 오버라이드를 방지할 수 있다.
+
+### 4.3.2 규칙: 인터페이스에서만 상속받을 것
+
+- 추상 클래스의 경우 기본 구현을 제공하고 다른 메서드는 추상화하기에 코드중복을 줄이기에는 편리하다. 하지만 커플링을 유발한다.
+  `93p 설명 예제는 추상 클래스를 사용하면 안되는 잘못된 예시 아닌가? 약간 억지 느낌이랄까?`
+
+### 4.3.3 클래스에 있는 코드의 중복은 다 무엇일까?
+
+- 코드 중복은 변경이 발생하면 두 곳 모두 변경해야하기에 좋지않다.
+- 하지만 경우에 따라 코드 중복이 있는 것이 더 나은 경우가 있다.
+
+## 4.4 복잡한 if체인 구문 리팩터링
+
+- 복잡한 로직을 class내부 메서드로 캡슐화
+
+## 4.5 필요 없는 코드 제거하기
+
+### 4.5.1 리팩터링 패턴: 삭제 후 컴파일하기
+
+- 인터페이스에서 사용하지 않는 메서드 제거
+- 삭제 후 컴파일을 함으로써 에러가 나는지 확인
