--- a/week04/최원오/06_데이터_보호.md
+++ b/week04/최원오/06_데이터_보호.md
@@ -121,6 +121,10 @@ class OrderProcessor {
 
 ### 6.1.2 규칙 적용하기
 
+1. getter를 private으로 변경
+2. 클래스로 코드 이관
+3. 이관 후 사용되지 않는 getter 제거
+
 ### 6.1.3 리팩러링 패턴: getter와 setter 제거하기
 
 - getter 대신 유사한 함수들을 많이 도입
@@ -136,8 +140,48 @@ class OrderProcessor {
 
 ### 6.2.2 규칙 적용하기
 
+- 데이터 캡슐화 - 변수와 메서드를 클래스로 옮기는 과정
+
+1. 동일한 접사를 가진 이름의 클래스를 생성
+2. getter와 setter 생성
+3. 컴파일러 오류의 참조 수정
+4. getter와 setter 제거하기 리팩터링 수행
+   1. getter를 private로 변경
+   2. 클래스로의 코드 이관으로 오류 수정
+   3. 이관 후 사용되지 않는 getter 제거
+
 ### 6.2.3 리팩터링 패턴: 데이터 캡슐화
 
 - 메서드를 캡슐화하면 이름을 단순하게 만들고 응집도를 높힐 수 있다.
 - 데이터에는 속성에 대한 어떤 전제가 존재할 수 있고, 이러한 속성은 더 많은 곳에서 데이터에 접근할수록 유지보수가 어려워진다.
--
+- 범위를 제한하면 클래스 내의 메서드만 데이터를 수정할 수 있으므로 이런 메서드들만 그 속성에 영향을 줄 수 있게 된다.
+- 리팩터링 필드 캡슐화와의 비교? 필드에 대한 퍼블릭 접근을 매개변수로 대체한다?
+
+## 6.3 복잡한 데이터 캡슐화
+
+- 비공개필드에 대한 완전한 제어를 허락하는 코드는 좋지 않다.
+
+## 6.4 순서에 존재하는 불변속성 제거하기
+
+- 순서 불변속성 - 무언가가 다른 것보다 먼저 호출되어야 할 때
+- 생성자를 활용하면 생성자를 먼저 호출하지 않는 것이 불가능하기 때문에 불변속성이 제거된다.
+
+### 6.4.1 리팩터링 패턴: 순서 강제화
+
+- 순서 강제화 변환에는 내부와 외부가 있으며 내부일 경우 getter나 pubilc 필드가 없어 더 강력한 캡슐화를 제공할 수 있다.
+
+1. 마지막으로 실행되어야 하는 메서드에 데이터 캡슐화를 적용
+2. 생성자가 첫 번째 메서드를 호출하도록 한다.
+3. 두 메서드의 인자가 연결되어 있다면 인자를 필드로 만들고 메서드에서 제거
+
+## 6.5 열거형을 제거하는 또 다른 방법
+
+### 6.5.1 비공개 생성자를 통한 열거
+
+- 언어가 열거형에 대해 메서드를 지원하지 않는 경우 private 생성자를 사용해 우회할 수 있다.
+- 생성자 자체를 private하게 해서 class내부에서만 인스턴스화 할 수 있도록 하는 방법
+
+### 6.5.2 숫자를 클래스에 다시 매핑하기
+
+- 열거형에서와 같은 순서로 모든 값을 포함하는 배열을 만드는 것
+- 이후 스위치 문을 제거하고 클래스로의 코드 이관
