7장 컴파일러와의 협업 정리2

--- a/week05/최원오/07_컴파일러와의 협업.md
+++ b/week05/최원오/07_컴파일러와의 협업.md
@@ -125,3 +125,6 @@
 - 경고를 무시할 때 마다 그 이후로 조금씩 주의를 덜 기울이게 된다.
 
 ## 7.4 컴파일러만 신뢰할 것
+
+- 컴파일러에게 프로그램의 도메인 구조와 불변속성을 가르치고 경고가 존재하지 않는 출력 결과에 익숙해진다면 성공적인 컴파일은 단순히 코드를 읽어서 얻을 수 있었던 것보다 더 많은 확신을 줄 것이다.
+- 컴파일러는 코드가 우리가 예상하는 문제를 해결할지 여부는 알 수 없지만, 우리가 생각하지 못한 이유로 프로그램이 손상될 수 있는지 여부는 알려줄 수 있다.
