--- a/week05/최원오/07_컴파일러와의 협업.md
+++ b/week05/최원오/07_컴파일러와의 협업.md
@@ -11,6 +11,20 @@
 - 정지 문제 - 런타임 동안 어떤 일이 일어날지 정확히 말할 수 없는 이유로 프로그램을 실행하지 않고는 프로그램이 어떻게 동작할 지 알 수 없다.
 - 보수적 분석 - 프로그램이 안전하다고 보장할 수 없는 경우 컴파일러는 프로그램을 허용하지 않는다.
 
+  - 컴파일러가 프로그램의 동작을 분석할 때, 안전성을 최우선으로 고려하여 의심스러운 상황에서는 항상 안전한 쪽으로 판단하는 접근 방식
+
+  ```TS
+  function processUser(user: { name?: string }) {
+    // 타입스크립트는 name이 undefined일 수 있다고 보수적으로 판단
+    // user.name.toLowerCase(); // 에러 발생!
+
+    // 안전한 접근을 위해서는 존재 여부를 먼저 확인해야 함
+    if (user.name) {
+        console.log(user.name.toLowerCase()); // 정상 동작
+    }
+  }
+  ```
+
 ### 7.1.2 장점: 도달성 검증은 메서드의 반환을 보장한다.
 
 - 보수적인 분석 중 하나는 메서드가 모든 경우에서 반환되는지 확인하는 것
@@ -38,6 +52,7 @@
 - null로 메서드를 호출하려고 하면 오류가 발생하기 때문에 위험하다.
 - 일부 도구는 이러한 경우 일부를 감지할 수 있지만, 모든 경우 감지할 수는 없으므로 무작정 도구에 의존할 수는 없다.
 - 런타임 오류의 위험은 nullable 변수를 다룰 때 주의필요!
+- 예제에서 length가 0인 경우 NaN
 
 ### 7.1.7 약점: 산술 오류는 오버플로나 손상을 일으킨다.
 
@@ -49,6 +64,11 @@
 - 기대하는 요소를 찾지 못할 위험이 있는 경우 전체 데이터 구조를 탐색하거나 요소가 확실하게 있음을 증명하기 위해 확정 할당의 접근 방식을 사용하면 해결 가능
 
 ### 7.1.9 무한루프는 애플리케이션을 지연시킨다.
+
+![alt text](image.png)
+![alt text](image-1.png)
+
+- while 조건이 ture일 경우 타입스크립트 컴파일러가 접근할 수 없는 코드 표시해주지만 잠재적인 무한 루프는 감지하지 못한다.
 
 ### 7.1.10 약점: 교착 상태 및 경쟁 상태로 인해 의도하지 않은 동작이 발생한다.
 
@@ -71,7 +91,17 @@
 - 캡슐화 강제를 통한 안전성 확보
 - 컴파일러로 사용하지 않는 코드 감지
 - 확정 값을 통한 안전성 확보
-  - 타입스크립트에서 class 생성자 파라미터에 readonly를 붙일 경우 자동으로 초기화되며 readonly 필드를 초기화하지 않을 경우 컴파일 에러가 발생함.
+
+  - 타입스크립트에서 class 생성자 파라미터에 접근 제한자(public, private, protected) 또는 readonly를 붙일 경우 자동으로 초기화되며 안붙힐 경우 필드를 초기화하지 않으면 컴파일 에러가 발생함.
+
+  ```TS
+  class A {
+    constructor ( test: string){}
+  };
+
+  const b = new A('123');
+  console.log(b.test); // Property 'test' does not exist on type 'A'.(2339)
+  ```
 
 ### 7.2.2 컴파일러와 싸우지 말 것
 
@@ -92,6 +122,7 @@
 **런타임 타입**
 
 - 런타임으로 판단에 필요한 정보를 옮기는 것
+- 타입 좁히기 느낌?
 
 **게으름**
 
@@ -100,12 +131,51 @@
 **기본값**
 
 - 기본값을 사용하는 대신 개발자가 무언가를 추가하거나 변경할 때마다 직접 처리하게 하라.
+- 기본값을 사용하지 않음으로써 컴파일러 에러로 무조건 필요 값을 넣어주게 하는 것이 좋은가?
 
 **상속**
 
 - 상속은 구현 클래스 간의 결합을 가져온다.
 
 **처리를 강제하지 않은 예외**
+
+- 처리를 강제한 예외 - 예외가 발생 시 예외를 처리하거나 최소한 호출자에게 예외가 처리되지 않았음을 알림
+- 처리가 강제하지 않은 예외 - 어떤 불변속성이 항상 참임을 알고 있지만 더 이상 코드로 제어할 수 없을 때와 같이 일어날 수 없는 일에 대해서만 사용해야 한다.
+
+```TS
+interface User {
+    id: string;
+    name: string;
+}
+
+// 처리를 강제한 예외 - 사용자 검색은 실패할 수 있음
+function findUser(id: string): Result<User, 'NotFound'> {
+    const user = database.find(id);
+    if (!user) {
+        return { success: false, error: 'NotFound' };
+    }
+    return { success: true, value: user };
+}
+
+// 처리를 강제하지 않은 예외 - 이미 존재하는 사용자의 이름 접근
+function getUserName(user: User): string {
+    // User 타입에 name이 필수로 있으므로
+    // 이 부분이 실패하면 프로그램의 불변속성이 깨진 것
+    return user.name;
+}
+```
+
+- 타입스크립트에는 처리를 강제하기 위한 형이 정의된 예외가 없다 = 실패 시에 대한 타입 지정이 불가능하다는 걸까? 예를 들면 성공시에는 string이 반환되고 실패시에는 throw 인데 throw에 대한 걸 설정할 수 없다
+  - Java와 같은 언어에 있는 checked exception이 없다
+  ```JAVA
+  public class FileReader {
+    // throws 키워드로 이 메서드가 FileNotFoundException을
+    // 발생시킬 수 있음을 명시
+    public static String readFile(String path) throws FileNotFoundException {
+        // 구현...
+    }
+  }
+  ```
 
 **아키텍처**
 
