9장 코드 삭제의 미학 정리2

--- a/week06/최원오/09_코드_삭제의_미학.md
+++ b/week06/최원오/09_코드_삭제의_미학.md
@@ -55,3 +55,111 @@
 - 가장 많이 호출되는 부분은 마이그레이션이 거의 확실하고, 가장 적게 호출되는 부분은 높은 확률로 삭제될 수 있다.
 - 레거시 코드를 리팩터링해서 결합과 취약성을 제거하고 코드를 최신으로 분류 또는 해당 부분을 다시 만들고 게이트를 변경해서 새 버전으로 전환
 - 일부 레거시 코드가 중요하지 않고 전략적이지 않은 경우 게이트에서 메서드를 삭제한다.
+
+## 9.5 동결된 프로젝트에서 코드 삭제
+
+- 동결된 프로젝트는 코드에 국한되지 않고 DB 테이블, 통합, 서비스 등이 포함될 수 있다.
+- 작성자가 프로젝트에 대해 잊어버리면 프로젝트가 존재하는지조차 알아채기가 불가능할 수 있다.
+- 코드에는 사용되지 않는다는 표시가 없기에 변경할 때마다 고려하고 유지해야하므로 정신적 오버헤드를 가중시킨다.
+
+### 9.5.1 바람직한 결과를 기본값으로 설정
+
+- 코드베이스 내부의 경우 메인 브랜치에서 코드를 되돌리고 별도의 브랜치에 넣을 수 있다. 그 다음 태그를 지정하고 6주 후에 태그를 삭제한다고 메모를 작성하여 6주 안에 프로젝트를 사용하지 않으면 그것은 제거될 것이라고 나타낼 수 있다.
+- 코드 외적인 경우 제거할 모든 구성 요소를 프로젝트 관리 도구에 기록해두고 티켓을 6주 후로 예약한다.
+- 위 시나리오에서는 실수로 기술적 장애물을 추가할 수 없고 사람의 판단에 의해서만 추가될 수 있다.
+
+### 9.5.2 스파이크와 스태빌라이즈(안정화)로 낭비 줄이기
+
+- 프로젝트의 품질에 노력을 기울이지 않고 6주 뒤 많이 사용된 코드라면 고품질로 재구현한다. 그렇지 않다면 삭제
+
+## 9.6 버전 관리에서 브랜치 삭제
+
+- 축적되는 브랜치는 PR 병합 후 브랜치 삭제를 잊거나 실험용 브랜치를 제거하는 것을 잊는 단순한 실수 또는 언젠가는 코드가 필요할 수 있다고 생각해서 동결된 프로젝트의 경우가 있다.
+- 더 어려운 유형의 브랜치는 보류 중이지만 통합 과정을 통과하지 못해 차단된 브랜치다.
+- 브랜치는 기술적으로는 거의 무료지만 정신적 오버헤드 측면에서는 비용이 많이 든다.
+- 메인, 릴리스 브랜치만 상시 운용
+
+### 9.6.1 브랜치 제한으로 낭비 최소화
+
+- 칸반은 진행 중인 작업 제한 개념을 사용한다. 팀이 진행할 수 있는 티켓 수에 상한선 정함으로써 개발에서의 병목현상을 노출하는 데 도움이 된다.
+- 너무 많은 브랜치의 문제는 병목현상 문제와 정확히 맞아떨어지기 때문에 동일한 해결책을 사용할 수 있다.
+
+## 9.7 코드 문서 삭제
+
+- 문서는 **관련성, 정확성, 발견 가능성** 3가지 속성 중 하나라도 누락되면 문서의 가치가 크게 떨어진다.
+
+### 9.7.1 지식을 문서화하는 방법을 결정하는 알고리즘
+
+- 문서화하는 것이 의미가 있는지 여부를 결정하는 절차
+  1. 문서화 대상이 자주 바뀌면 문서화해서 얻을 수 있는 것이 없다.
+  2. 드물게 사용하는 경우 문서화한다.
+  3. 그렇지 않고, 자동화할 수 있으면 자동화한디.
+  4. 그렇지 않으면 외워라.
+
+## 9.8 테스트 코드 삭제
+
+- 테스트는 다양한 형태로 제공되며 문서보다 더 많은 속성을 가지고 있다.
+
+### 9.8.1 낙관적 테스트 삭제
+
+- 실패할 수 없는 테스트는 가치가 없다.
+- 실패한 적이 없는 테스트를 신뢰하지 마라.
+- 문제를 바로잡기 전에 테스트를 만들면 요건을 만족하는지 여부를 알 수 있지만, 바로잡은 후 테스트를 만들면 항상 통과한느 것만 볼 뿐이다.
+
+### 9.8.2 비관적 테스트 삭제
+
+- 항상 실패하는 테스트를 한다면 테스트에서 오류가 발견되더라도 피로를 느껴 중대한 오류를 놓칠 위험이 있다.
+
+### 9.8.3 불안정 테스트 수정 또는 삭제
+
+- 항상 같은 결과를 내지 않는 예측할 수 없는 테스트로 어떤 조치도 끌어내지 않는다.
+
+### 9.8.4 복잡한 테스트를 제거하기 위한 코드 리팩터링
+
+- 테스트 코드가 복잡하면 코드의 문제인지 테스트의 문제인지 알기 어렵다.
+- 모든 리팩터링 노력은 테스트가 아닌 코드에 집중되야 한다.
+
+### 9.8.5 속도를 높이는 테스트 문화
+
+- 어떤 테스트들이 다른 테스트를 덜 자주 실행하게 만든다면 개발에 지장을 주므로 해결이 필요하다.
+- 느린 테스트와 빠른 테스트를 분리하고 가능한 빠른 테스트를 지속적으로 실행하거나 느린 테스트의 실패 원인을 관찰하고 관련이 없는 경우 제거하는 것
+- 위치에 대한 테스트를 따로 진행하여 오류를 더 빨리 수정
+
+## 9.9 설정 코드 삭제
+
+- 코드베이스를 늘리지 않고도 사용자 수를 늘릴 수 있을 때 설정성은 소프트웨어의 유용성을 높일 수 있다.
+- 설정성을 추가할 때마다 코드의 복잡성이 증가한다.
+
+### 9.9.1 설정의 예상 수명으로 범위 지정
+
+**실험을 위한 설정**
+
+- 설정을 통해 일부 사용자는 변경 사항을 경험할 수 있지만 다른 사용자는 그렇지 않다. (피처 플래그)
+- 모든 사용자에게 영향을 주지 않고 피드백을 적용하거나 변경 사항을 선택적으로 해제할 수 있다.
+- 무엇이 실험을 위한 설정인지를 처음부터 결정하고 테스트가 완료되는 즉시 제거하라는 알람을 생성해야 한다.
+
+**과도기적인 설정**
+
+- 비지니스 또는 코드베이스가 중요 변경 사항을 겪고 있는 동안 유용
+- 많은 유형의 전환이 사용자에게는 잘 보이지 않는다. 즉, 설정을 코드 외부가 아닌 코드 내부에 코드의 일부로 포함시킨다.
+- 전환이 완료되고 오래된 부분을 제거할 수 있는 위치가 있다.
+
+**영구적인 설정**
+
+- 사용량을 증가시키거나 유지보수가 간편해야 하기 떄문에 특별하다.
+- 사용량이 증가하지 않고 유지보수가 간단하지 않은 경우 비용 가치가 없으므로 제거해야한다.
+
+## 9.10 라이브러리 제거를 위한 코드 삭제
+
+- 라이브러리의 코드를 유지보수할 필요는 없지만 버전에 따라 코드를 수정해야 한다.
+- 라이브러리가 의존하는 의존성에 대해서도 걱정해야 한다.
+
+### 9.10.1 외부 라이브러리에 대한 의존도 제한
+
+- 고품질을 공급하는 업체의 라이브러리를 선택해서 해당 업체의 내부 품질 및 보안 요건을 믿는 것
+- 라이브러리가 개선 용도인지 중요 용도인지를 분류하여 궁극적으로 라이브러리에 대한 의존을 줄이자
+
+## 9.11 작동 중인 기능에서 코드 삭제
+
+- 코드 비용과 기능 이점의 균형을 조정할 때는 얼마나 오랫동안 복잡성의 증가를 받아들일지, 어떻게 예측 가능성을 평가할지, 어떻게 새로운 기능을 테스트할지, 사람들을 얼마나 잘 참여시키는지 등등 많은 요소가 작용한다.
+- 사용되지 않는 것은 잠재력과 상관없이 비용일 뿐이다.
