--- a/week07/최원오/11_코드_구조_따르기.md
+++ b/week07/최원오/11_코드_구조_따르기.md
@@ -36,17 +36,80 @@
 
 - 제어 연산자, 메서드 호출, 단순히 열거된 코드의 줄을 통해 행위를 텍스트로 표현한다.
 - 메서드 호출과 열거된 코드는 비지역적 구조를 표현할 수 있지만 루프는 지역적으로만 동작가능하다.
+  - 루프는 일단 시작되면 그 내부 로직에 따라서만 동작하고, 외부에서 루프의 실행을 직접적으로 조작하거나 제어할 수 없다.
 - 제어 연산자와 메서드 호출은 무한 루프가 가능하다.
 - 안전성과 작은 변화를 선호하기에 제어 흐름을 사용해 리팩터링하지 않는다.
+  - 제어흐름(루프 등)안에 행위를 직접 기술하지말고 행위를 분리(함수 추출)하고 제어흐름에서 분리된 행위(함수)를 실행
 - 큰 조정이 필요한 경우 동작을 제어흐름으로 리팩터링 한다음 다시 리팩터링 하는 것이 유용
 
 ### 11.2.2 데이터 구조에 행위 코드화하기
 
 - 재귀 데이터 구조는 기존의 변형이 발생하는 지점과 일치하지 않는 한 큰 변경을 수행하기가 더 어렵다. 그러나 작은 변경은 더 쉽고 안전하다.
+  - 재귀 데이터 구조에서는 데이터의 구조가 명확하게 정의되어 있어서, 구조를 크게 바꾸려면 전체 데이터 구조를 수정해야 함
+  - 하지만 데이터 구조를 변경하지 않고 해당 데이터 구조를 활용하는 쪽에서는 자유롭게 활용이 가능하다.
 - 더 많은 타입 안전성과 지역성을 어디 때문
 - 클래스로 타입 코드 대체 + 전략 패턴의 도입 케이스
 
-### 11.2.3 데이터에 행위 코드화하기
+```typescript
+// 1. 재귀적 데이터 구조
+type TreeNode<T> = {
+  value: T;
+  left: TreeNode<T> | null;
+  right: TreeNode<T> | null;
+};
+
+// 2. 제어 흐름 기반 접근
+function processTreeWithControl<T>(tree: TreeNode<T>): void {
+  const queue: TreeNode<T>[] = [tree];
+  while (queue.length > 0) {
+    const node = queue.shift()!;
+    // 여기서 직접 데이터 조작
+    node.value = transform(node.value); // 위험: 직접적인 상태 변경
+    if (node.left) queue.push(node.left);
+    if (node.right) queue.push(node.right);
+  }
+}
+
+// 3. 재귀 데이터 기반 접근
+function transformTree<T>(node: TreeNode<T>, fn: (value: T) => T): TreeNode<T> {
+  return {
+    value: fn(node.value),
+    left: node.left ? transformTree(node.left, fn) : null,
+    right: node.right ? transformTree(node.right, fn) : null,
+  };
+}
+```
+
+여기서 "큰 변경이 어렵다"는 것은:
+
+1. 재귀 데이터 구조를 근본적으로 바꾸려면 (예: 이진 트리를 3진 트리로):
+
+```typescript
+// 기존 구조와 많이 다른 새로운 형태로 변경하기 어려움
+type TernaryNode<T> = {
+  value: T;
+  left: TernaryNode<T> | null;
+  middle: TernaryNode<T> | null;
+  right: TernaryNode<T> | null;
+};
+```
+
+이러한 접근의 장점:
+
+1. 컴파일러가 타입 오류를 미리 잡아줌
+2. 각 변형이 명확한 입력과 출력을 가짐
+3. 변경의 영향 범위가 명확히 제한됨
+4. 변형을 조합하기 쉬움
+
+제어 흐름 방식과 비교하면:
+
+1. 제어 흐름은 상태 변경을 직접 수행하여 부작용이 발생하기 쉬움
+2. 변경의 영향 범위를 추적하기 어려움
+3. 여러 변경을 조합하기 어려움
+
+이렇게 보면 재귀 데이터 구조가 큰 구조적 변경은 어렵지만, 일반적인 데이터 변형과 같은 작은 변경에서는 더 안전하고 관리하기 쉽다는 것을 알 수 있습니다.
+
+### 11.2.3 데이터에 행위 코드화하기 (????)
 
 - 컴파일러의 사각지대이기에 조심해야 한다.
 - 데이터를 검색해서 데이터에서 데이터 구조를 생성하는 도구를 사용하는 것으로 해결가능? (Map 객체 등)
