13장 나쁜 코드를 식별 가능하게 만들기 보충

--- a/week08/13_나쁜_코드를_식별_가능하게_만들기.md
+++ b/week08/13_나쁜_코드를_식별_가능하게_만들기.md
@@ -54,3 +54,58 @@
 - 정보가 정확하다는 전제하에 기존에 있는 모든 정보를 보존해야 한다.
 - 리팩터링을 자신이 하게 될 수 있다는 생각으로 다음 사람을 위해 작업이 불편하게 만들지 않아야 한다는 것이다.
 - 결과 코드를 한눈에 알 수 있어야 한다.
+
+## 13.5 나쁜 코드를 나쁘게 보이기 위한 방법
+
+- 팀이 염두에 둔 코드 스멜에 맞는 방법을 찾는 것이 좋다.
+- 안전과 가역성은 필수 요소다.
+
+### 13.5.1 열거형 사용
+
+- 불리언과 같은 타입 코드 대신 열거형을 넣는 것
+- 열거형은 추가하기가 일반적으로 빠르고 간단하며 쉽게 발견할 수 있다.
+- 열거형은 이름이 지정되어 있기 때문에 읽기가 더 쉽다는 장점도 있다.
+
+### 13.5.2 정수형 및 문자열을 타입 코드로 사용
+
+- 문자열 타입 코드는 모든 값을 미리 선언할 필요가 없기 떄문에 매우 유연하다. 따라서 빠른 실험이나 검증이 필요한 상황에서 이 코드를 사용한다.
+- 동일한 변수를 여러 번 확인해서 문자열이나 상수가 수직으로 정렬되기 때문에 더욱 눈에 띕니다.
+
+### 13.5.3 코드에 매직 넘버 넣기
+
+- 바쁘거나 실험적인 코드거나 리팩터링이 필요한 점을 강조하고 싶을 때는 매직 넘버를 사용한다.
+- 상수의 이름이 좋지 않거나 부정확하게 명명되면 추가 정보를 더하지 않아서 문제의식 없이 인라인으로 사용하게 될 수 있다.
+- 상수의 인라인 사용 시 주석을 달자
+
+### 13.5.4 코드에 주석 넣기
+
+- 주석을 사용하면 정보 보존 및 이목을 끌게 돼서 두 가지 목적을 달성할 수 있다.
+- 메서드 이름으로 사용할 수 있는 주석을 추가하는 것은 향후 리팩터링 작업의 시작 위치를 알리는 좋은 방법이다.
+
+### 13.5.5 코드에 공백 넣기
+
+- 공백을 삽입해 메서드를 분리할 위치를 제안할 수 있다.
+- 구조는 볼 수 있지만 이름을 지을 만큼 충분히 이해하지 못했을 때는 공백을 추가하는 것이 유용
+- 공백인 줄은 코드문을 그룹화하는 것 외에도 필드를 그룹화해서 데이터를 캡슐화할 위치를 제안할 수도 있다.
+
+### 13.5.6 이름을 진으로 항목을 그룹화하기
+
+- 공통 접사를 붙여 캡슐화 후보를 표시한다.
+
+### 13.5.7 이름에 컨텍스트 추가하기
+
+- 접사 자체로 명확한 신호일 수 있지만 더 강조 표시가 필요한 경우 카멜케이스나 파스칼케이스 형식의 이름에 밑줄을 추가한다.
+
+### 13.5.8 긴 메서드 만들기
+
+- 일부 메서드가 만족스럽지 못하게 추출되었다면 하나로 합쳐 하나의 긴 메서드를 만들 수 있다.
+- 긴 메서드는 대부분 개발자에게 경호 신호이므로 무언가를 수행해야 한다는 명학환 신호가 된다.
+
+### 13.5.9 메서드에 많은 매개변수 넘기기
+
+- 메서드의 매개변수가 많아지면 메서드를 정의하는 쪽과 메서드를 호출하는 쪽 둘다 명확히 식별된다.
+
+### 13.5.10 getter와 setter 사용하기
+
+- getter와 setter는 코드를 밀어 넣어 캡슐화 클래스를 보강할 때 사라져야 한다.
+- get과 set이라는 접두사가 붙기때문에 정의 및 호출 하는 부분을 쉽게 찾을 수 있다.
